aarch64: SIGSEGV when "-XX:+ZeroTLAB" is specified along with GC options

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 8-pool, 9
    • Component/s: hotspot
    • None
    • gc
    • 9
    • b151
    • aarch64
    • linux

        Reported by kavitha.natarajan@linaro.org:

        Tests fail with SIGSEGV on aarch64 when "-XX:+ZeroTLAB" is specified along with GC options.

        The following are the failing jtreg tests:
        /hotspot/test/compiler/stringopts/TestStringObjectInitialization.java
        hotspot/test/gc/TestSystemGC.java
        hotspot/test/gc/arguments/TestAlignmentToUseLargePages.java
        hotspot/test/gc/cms/TestBubbleUpRef.java
        hotspot/test/gc/metaspace/TestMetaspacePerfCounters.java
        hotspot/test/gc/parallel/TestDynShrinkHeap.java
        hotspot/test/gc/stress/TestGCOld.java

        kavitha natarajan already has a patch for this issue which is under jtreg testing.

              Assignee:
              Andrew Haley
              Reporter:
              Fei Yang
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: