8169177: AArch64: SIGSEGV when "-XX:+ZeroTLAB" is specified along with GC options

Reviewed-by: aph